--- a/blogspot.html
+++ b/blogspot.html
@@ -4,7 +4,11 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Haremos un blogspot</h1>
-        <p>El primer parrafo de mi blogspot</p>
+        <div id="container">
+            <div id="post">
+                <h1>este es el titulo actractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio en donde vamos aexplicar las cosas incleibles que se puede hacer en una rama</p>
+            </div>
+        </div>
     </body>
 </html>
