Estructura inicial de la cabecera

--- a/blogspot.html
+++ b/blogspot.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera"> Cabecera</div>
             <div id="post">
                 <h1>este es el titulo actractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio en donde vamos aexplicar las cosas incleibles que se puede hacer en una rama</p>
