--- a/blogspot.html
+++ b/blogspot.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera"> 
-                Hyperblog <spam id="tagline">Tu Blog de confianza</spam>
+                Hyperblog <spam id="tagline">Tu Blog MAESTRO</spam>
             </div>
             <div id="post">
                 <h1>este es el titulo actractivo e interesante del post</h1>
