--- a/blogspot.html
+++ b/blogspot.html
@@ -6,6 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera"> 
+                <img id="logo" src="imagenes/astronauta.png" />
                 Hyperblog <spam id="tagline">Tu Blog de CABECERA</spam>
             </div>
             <div id="post">
