Cambios a entidades HTML.

--- a/blogspot.html
+++ b/blogspot.html
@@ -11,7 +11,7 @@
             </div>
             <div id="post">
                 <h1>este es el titulo actractivo e interesante del post</h1>
-                <p>Y este es el párrafo de inicio en donde vamos aexplicar las cosas increibles que se puede hacer en una rama</p>
+                <p>Y este es el p&aacute;rrafo de inicio en donde vamos aexplicar las cosas increibles que se puede hacer en una rama</p>
                 <p>Los blogs son la mejor forma de compartir ionformacion y tus ideas. Mucho mas que ir a conferencias or salir en Youtube, excepto si eres un rockstar, pero estadisticamente no lo eres... pro ahora.</p>
             </div>
             <div id="footer">
