Linea agregada y mensaje de contribucion.

--- a/blogspot.html
+++ b/blogspot.html
@@ -15,7 +15,7 @@
                 <p>Los blogs son la mejor forma de compartir ionformacion y tus ideas. Mucho mas que ir a conferencias or salir en Youtube, excepto si eres un rockstar, pero estadisticamente no lo eres... pro ahora.</p>
             </div>
             <div id="footer">
-                Hecho con amor en Platzi <3
+                Hecho con amor en Platzi, realizando un fork. <3
             </div>
         </div>
     </body>
