--- a/blogspot.html
+++ b/blogspot.html
@@ -12,10 +12,11 @@
             <div id="post">
                 <h1>este es el titulo actractivo e interesante del post</h1>
                 <p>Y este es el p&aacute;rrafo de inicio en donde vamos aexplicar las cosas increibles que se puede hacer en una rama</p>
+                <p><img src="imagenes/attack-on-titan.jpg" style="width: 100%"/></p>
                 <p>Los blogs son la mejor forma de compartir ionformacion y tus ideas. Mucho mas que ir a conferencias or salir en Youtube, excepto si eres un rockstar, pero estadisticamente no lo eres... pro ahora.</p>
             </div>
             <div id="footer">
-                Hecho con amor en Platzi, realizando un fork. <3
+                Hecho con amor en Platzi, realizando un fork. 
             </div>
         </div>
     </body>
